Fix PercentInput label animation on iOS.

--- a/marketing/src/styles/index.css
+++ b/marketing/src/styles/index.css
@@ -44,3 +44,6 @@ h6 {
   height: 100%;
 }
 
+input {
+  border-radius: 0 !important;
+}
